update news style.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ vendor
 ~/.vscode-root/storage.json
 ~/.vscode-root/rapid_render.json
 ~/.vscode-root/Cache/index-dir/the-real-index
+~/.vscode-root/logs/20210429T154813/exthost1/output_logging_20210429T173224/4-SCSS Formatter.log
