update news style.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ vendor
 ~/.vscode-root/rapid_render.json
 ~/.vscode-root/Cache/index-dir/the-real-index
 ~/.vscode-root/logs/20210429T154813/exthost1/output_logging_20210429T173224/4-SCSS Formatter.log
+~/.vscode-root/Backups/715529564a2a4d38d126a66b8465fb2c/file/-4ac6751
+~/.vscode-root/*
